# mocap-server

./: README.md
Unix/: CMakeCache.txt  Makefile  cmake_install.cmake
Unix/flatbuf/: Makefile  cmake_install.cmake
Unix/smallUDPClient/: cmake_install.cmake
src/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  mocap-server.cpp
src/flatbuf/: CMakeLists.txt
src/mocap-test/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  mocap-test.cpp  sudpcexample.cpp
src/protobuf/: CMakeLists.txt
src/smallUDPClient/: CMakeLists.txt  smallUDPClient.cpp  smallUDPClient.hpp  sudpcexample.cpp
